packages/fangyuan-rule-parser/src/lang/FangyuanParser.ts
// Generated from src/lang/FangyuanParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { FangyuanParserListener } from "./FangyuanParserListener";
import { FangyuanParserVisitor } from "./FangyuanParserVisitor";


export class FangyuanParser extends Parser {
	public static readonly BIND_PARAMETER_ = 1;
	public static readonly RULESET = 2;
	public static readonly RULE = 3;
	public static readonly WHEN = 4;
	public static readonly THEN = 5;
	public static readonly END = 6;
	public static readonly AND_ = 7;
	public static readonly OR_ = 8;
	public static readonly NOT_ = 9;
	public static readonly IS_ = 10;
	public static readonly IN_ = 11;
	public static readonly LIKE_ = 12;
	public static readonly MATCH_ = 13;
	public static readonly INCLUDES = 14;
	public static readonly REGEXP_ = 15;
	public static readonly ISNULL_ = 16;
	public static readonly NOTNULL_ = 17;
	public static readonly NULL_ = 18;
	public static readonly JSON_NUMBER = 19;
	public static readonly ABSTRACT = 20;
	public static readonly ASSERT = 21;
	public static readonly BOOLEAN = 22;
	public static readonly BREAK = 23;
	public static readonly BYTE = 24;
	public static readonly CASE = 25;
	public static readonly CATCH = 26;
	public static readonly CHAR = 27;
	public static readonly CLASS = 28;
	public static readonly CONST = 29;
	public static readonly CONTINUE = 30;
	public static readonly DEFAULT = 31;
	public static readonly DO = 32;
	public static readonly DOUBLE = 33;
	public static readonly ELSE = 34;
	public static readonly ENUM = 35;
	public static readonly EXTENDS = 36;
	public static readonly FINAL = 37;
	public static readonly FINALLY = 38;
	public static readonly FLOAT = 39;
	public static readonly FOR = 40;
	public static readonly IF = 41;
	public static readonly GOTO = 42;
	public static readonly IMPLEMENTS = 43;
	public static readonly IMPORT = 44;
	public static readonly INSTANCEOF = 45;
	public static readonly INT = 46;
	public static readonly INTERFACE = 47;
	public static readonly LONG = 48;
	public static readonly NATIVE = 49;
	public static readonly NEW = 50;
	public static readonly PACKAGE = 51;
	public static readonly PRIVATE = 52;
	public static readonly PROTECTED = 53;
	public static readonly PUBLIC = 54;
	public static readonly RETURN = 55;
	public static readonly SHORT = 56;
	public static readonly STATIC = 57;
	public static readonly STRICTFP = 58;
	public static readonly SUPER = 59;
	public static readonly SWITCH = 60;
	public static readonly SYNCHRONIZED = 61;
	public static readonly THIS = 62;
	public static readonly THROW = 63;
	public static readonly THROWS = 64;
	public static readonly TRANSIENT = 65;
	public static readonly TRY = 66;
	public static readonly VOID = 67;
	public static readonly VOLATILE = 68;
	public static readonly WHILE = 69;
	public static readonly DECIMAL_LITERAL = 70;
	public static readonly HEX_LITERAL = 71;
	public static readonly OCT_LITERAL = 72;
	public static readonly BINARY_LITERAL = 73;
	public static readonly FLOAT_LITERAL = 74;
	public static readonly HEX_FLOAT_LITERAL = 75;
	public static readonly BOOL_LITERAL = 76;
	public static readonly CHAR_LITERAL = 77;
	public static readonly STRING_LITERAL = 78;
	public static readonly NULL_LITERAL = 79;
	public static readonly LPAREN = 80;
	public static readonly RPAREN = 81;
	public static readonly LBRACE = 82;
	public static readonly RBRACE = 83;
	public static readonly LBRACK = 84;
	public static readonly RBRACK = 85;
	public static readonly SEMI = 86;
	public static readonly COMMA = 87;
	public static readonly DOT = 88;
	public static readonly EQUAL = 89;
	public static readonly LE = 90;
	public static readonly GE = 91;
	public static readonly NOTEQUAL = 92;
	public static readonly AND = 93;
	public static readonly OR = 94;
	public static readonly INC = 95;
	public static readonly DEC = 96;
	public static readonly ASSIGN = 97;
	public static readonly GT = 98;
	public static readonly LT = 99;
	public static readonly BANG = 100;
	public static readonly TILDE = 101;
	public static readonly QUESTION = 102;
	public static readonly COLON = 103;
	public static readonly ADD = 104;
	public static readonly SUB = 105;
	public static readonly MUL = 106;
	public static readonly DIV = 107;
	public static readonly BITAND = 108;
	public static readonly BITOR = 109;
	public static readonly CARET = 110;
	public static readonly MOD = 111;
	public static readonly ADD_ASSIGN = 112;
	public static readonly SUB_ASSIGN = 113;
	public static readonly MUL_ASSIGN = 114;
	public static readonly DIV_ASSIGN = 115;
	public static readonly AND_ASSIGN = 116;
	public static readonly OR_ASSIGN = 117;
	public static readonly XOR_ASSIGN = 118;
	public static readonly MOD_ASSIGN = 119;
	public static readonly LSHIFT_ASSIGN = 120;
	public static readonly RSHIFT_ASSIGN = 121;
	public static readonly URSHIFT_ASSIGN = 122;
	public static readonly ARROW = 123;
	public static readonly COLONCOLON = 124;
	public static readonly AT = 125;
	public static readonly ELLIPSIS = 126;
	public static readonly WS = 127;
	public static readonly COMMENT = 128;
	public static readonly LINE_COMMENT = 129;
	public static readonly IDENTIFIER = 130;
	public static readonly RULE_parse = 0;
	public static readonly RULE_macroDeclaration = 1;
	public static readonly RULE_packageDeclaration = 2;
	public static readonly RULE_declaration = 3;
	public static readonly RULE_rulesetDeclaration = 4;
	public static readonly RULE_ruleDeclaration = 5;
	public static readonly RULE_ruleLHS = 6;
	public static readonly RULE_condition = 7;
	public static readonly RULE_logistics = 8;
	public static readonly RULE_ruleRHS = 9;
	public static readonly RULE_attribute = 10;
	public static readonly RULE_json = 11;
	public static readonly RULE_obj = 12;
	public static readonly RULE_pair = 13;
	public static readonly RULE_arr = 14;
	public static readonly RULE_value = 15;
	public static readonly RULE_expr = 16;
	public static readonly RULE_variableDeclaration = 17;
	public static readonly RULE_literal_value = 18;
	public static readonly RULE_unary_operator = 19;
	public static readonly RULE_any_name = 20;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"parse", "macroDeclaration", "packageDeclaration", "declaration", "rulesetDeclaration", 
		"ruleDeclaration", "ruleLHS", "condition", "logistics", "ruleRHS", "attribute", 
		"json", "obj", "pair", "arr", "value", "expr", "variableDeclaration", 
		"literal_value", "unary_operator", "any_name",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"'and'", "'or'", "'not'", "'is'", "'in'", "'like'", "'match'", "'includes'", 
		"'regexp'", "'isnull'", "'notnull'", undefined, undefined, "'abstract'", 
		"'assert'", "'boolean'", "'break'", "'byte'", "'case'", "'catch'", "'char'", 
		"'class'", "'const'", "'continue'", "'default'", "'do'", "'double'", "'else'", 
		"'enum'", "'extends'", "'final'", "'finally'", "'float'", "'for'", "'if'", 
		"'goto'", "'implements'", "'import'", "'instanceof'", "'int'", "'interface'", 
		"'long'", "'native'", "'new'", "'package'", "'private'", "'protected'", 
		"'public'", "'return'", "'short'", "'static'", "'strictfp'", "'super'", 
		"'switch'", "'synchronized'", "'this'", "'throw'", "'throws'", "'transient'", 
		"'try'", "'void'", "'volatile'", "'while'", undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "'null'", 
		"'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'=='", 
		"'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", "'--'", "'='", "'>'", 
		"'<'", "'!'", "'~'", "'?'", "':'", "'+'", "'-'", "'*'", "'/'", "'&'", 
		"'|'", "'^'", "'%'", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", 
		"'%='", "'<<='", "'>>='", "'>>>='", "'->'", "'::'", "'@'", "'...'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "BIND_PARAMETER_", "RULESET", "RULE", "WHEN", "THEN", "END", 
		"AND_", "OR_", "NOT_", "IS_", "IN_", "LIKE_", "MATCH_", "INCLUDES", "REGEXP_", 
		"ISNULL_", "NOTNULL_", "NULL_", "JSON_NUMBER", "ABSTRACT", "ASSERT", "BOOLEAN", 
		"BREAK", "BYTE", "CASE", "CATCH", "CHAR", "CLASS", "CONST", "CONTINUE", 
		"DEFAULT", "DO", "DOUBLE", "ELSE", "ENUM", "EXTENDS", "FINAL", "FINALLY", 
		"FLOAT", "FOR", "IF", "GOTO", "IMPLEMENTS", "IMPORT", "INSTANCEOF", "INT", 
		"INTERFACE", "LONG", "NATIVE", "NEW", "PACKAGE", "PRIVATE", "PROTECTED", 
		"PUBLIC", "RETURN", "SHORT", "STATIC", "STRICTFP", "SUPER", "SWITCH", 
		"SYNCHRONIZED", "THIS", "THROW", "THROWS", "TRANSIENT", "TRY", "VOID", 
		"VOLATILE", "WHILE", "DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", 
		"BINARY_LITERAL", "FLOAT_LITERAL", "HEX_FLOAT_LITERAL", "BOOL_LITERAL", 
		"CHAR_LITERAL", "STRING_LITERAL", "NULL_LITERAL", "LPAREN", "RPAREN", 
		"LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "EQUAL", 
		"LE", "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", "ASSIGN", "GT", "LT", 
		"BANG", "TILDE", "QUESTION", "COLON", "ADD", "SUB", "MUL", "DIV", "BITAND", 
		"BITOR", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
		"AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", 
		"RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "ARROW", "COLONCOLON", "AT", "ELLIPSIS", 
		"WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(FangyuanParser._LITERAL_NAMES, FangyuanParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return FangyuanParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "FangyuanParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return FangyuanParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return FangyuanParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(FangyuanParser._ATN, this);
	}
	// @RuleVersion(0)
	public parse(): ParseContext {
		let _localctx: ParseContext = new ParseContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, FangyuanParser.RULE_parse);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 43;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FangyuanParser.PACKAGE) {
				{
				this.state = 42;
				this.packageDeclaration();
				}
			}

			this.state = 48;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FangyuanParser.AT) {
				{
				{
				this.state = 45;
				this.macroDeclaration();
				}
				}
				this.state = 50;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 54;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FangyuanParser.IDENTIFIER) {
				{
				{
				this.state = 51;
				this.attribute();
				}
				}
				this.state = 56;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 60;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FangyuanParser.RULESET || _la === FangyuanParser.RULE) {
				{
				{
				this.state = 57;
				this.declaration();
				}
				}
				this.state = 62;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 63;
			this.match(FangyuanParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public macroDeclaration(): MacroDeclarationContext {
		let _localctx: MacroDeclarationContext = new MacroDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, FangyuanParser.RULE_macroDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 65;
			this.match(FangyuanParser.AT);
			this.state = 66;
			this.match(FangyuanParser.IDENTIFIER);
			this.state = 69;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FangyuanParser.COLON) {
				{
				this.state = 67;
				this.match(FangyuanParser.COLON);
				this.state = 68;
				this.match(FangyuanParser.IDENTIFIER);
				}
			}

			this.state = 71;
			this.match(FangyuanParser.LBRACE);
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 72;
				this.match(FangyuanParser.STRING_LITERAL);
				}
				}
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === FangyuanParser.STRING_LITERAL);
			this.state = 77;
			this.match(FangyuanParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public packageDeclaration(): PackageDeclarationContext {
		let _localctx: PackageDeclarationContext = new PackageDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, FangyuanParser.RULE_packageDeclaration);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 79;
			this.match(FangyuanParser.PACKAGE);
			this.state = 84;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 80;
					this.match(FangyuanParser.IDENTIFIER);
					this.state = 81;
					this.match(FangyuanParser.DOT);
					}
					}
				}
				this.state = 86;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
			}
			this.state = 87;
			this.match(FangyuanParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declaration(): DeclarationContext {
		let _localctx: DeclarationContext = new DeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, FangyuanParser.RULE_declaration);
		try {
			this.state = 91;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case FangyuanParser.RULE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 89;
				this.ruleDeclaration();
				}
				break;
			case FangyuanParser.RULESET:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 90;
				this.rulesetDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public rulesetDeclaration(): RulesetDeclarationContext {
		let _localctx: RulesetDeclarationContext = new RulesetDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, FangyuanParser.RULE_rulesetDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 93;
			this.match(FangyuanParser.RULESET);
			this.state = 94;
			this.match(FangyuanParser.STRING_LITERAL);
			this.state = 98;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FangyuanParser.IDENTIFIER) {
				{
				{
				this.state = 95;
				this.attribute();
				}
				}
				this.state = 100;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 102;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 101;
				this.ruleDeclaration();
				}
				}
				this.state = 104;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === FangyuanParser.RULE);
			this.state = 106;
			this.match(FangyuanParser.END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ruleDeclaration(): RuleDeclarationContext {
		let _localctx: RuleDeclarationContext = new RuleDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, FangyuanParser.RULE_ruleDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 108;
			this.match(FangyuanParser.RULE);
			this.state = 109;
			this.match(FangyuanParser.STRING_LITERAL);
			this.state = 113;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FangyuanParser.IDENTIFIER) {
				{
				{
				this.state = 110;
				this.attribute();
				}
				}
				this.state = 115;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 116;
			this.match(FangyuanParser.WHEN);
			this.state = 117;
			this.ruleLHS();
			this.state = 118;
			this.match(FangyuanParser.THEN);
			this.state = 119;
			this.ruleRHS();
			this.state = 120;
			this.match(FangyuanParser.END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ruleLHS(): RuleLHSContext {
		let _localctx: RuleLHSContext = new RuleLHSContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, FangyuanParser.RULE_ruleLHS);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 125;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FangyuanParser.BIND_PARAMETER_ || _la === FangyuanParser.NOT_ || _la === FangyuanParser.AND || _la === FangyuanParser.OR || _la === FangyuanParser.IDENTIFIER) {
				{
				{
				this.state = 122;
				this.condition();
				}
				}
				this.state = 127;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public condition(): ConditionContext {
		let _localctx: ConditionContext = new ConditionContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, FangyuanParser.RULE_condition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 129;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FangyuanParser.NOT_ || _la === FangyuanParser.AND || _la === FangyuanParser.OR) {
				{
				this.state = 128;
				this.logistics();
				}
			}

			this.state = 133;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === FangyuanParser.BIND_PARAMETER_) {
				{
				this.state = 131;
				this.match(FangyuanParser.BIND_PARAMETER_);
				this.state = 132;
				this.match(FangyuanParser.COLON);
				}
			}

			this.state = 135;
			this.match(FangyuanParser.IDENTIFIER);
			this.state = 136;
			this.match(FangyuanParser.LPAREN);
			this.state = 137;
			this.expr(0);
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FangyuanParser.COMMA) {
				{
				{
				this.state = 138;
				this.match(FangyuanParser.COMMA);
				this.state = 139;
				this.expr(0);
				}
				}
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 145;
			this.match(FangyuanParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public logistics(): LogisticsContext {
		let _localctx: LogisticsContext = new LogisticsContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, FangyuanParser.RULE_logistics);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 147;
			_la = this._input.LA(1);
			if (!(_la === FangyuanParser.NOT_ || _la === FangyuanParser.AND || _la === FangyuanParser.OR)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ruleRHS(): RuleRHSContext {
		let _localctx: RuleRHSContext = new RuleRHSContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, FangyuanParser.RULE_ruleRHS);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.json();
			this.state = 154;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FangyuanParser.COMMA) {
				{
				{
				this.state = 150;
				this.match(FangyuanParser.COMMA);
				this.state = 151;
				this.json();
				}
				}
				this.state = 156;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attribute(): AttributeContext {
		let _localctx: AttributeContext = new AttributeContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, FangyuanParser.RULE_attribute);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 157;
			this.match(FangyuanParser.IDENTIFIER);
			this.state = 158;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public json(): JsonContext {
		let _localctx: JsonContext = new JsonContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, FangyuanParser.RULE_json);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 160;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public obj(): ObjContext {
		let _localctx: ObjContext = new ObjContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, FangyuanParser.RULE_obj);
		try {
			this.state = 168;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 16, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 162;
				this.match(FangyuanParser.LBRACE);
				this.state = 163;
				this.pair();
				this.state = 164;
				this.match(FangyuanParser.RBRACE);
				}
				break;
